Adjust in library Create asynctask Call new activity from app

--- a/jokelibrary/src/main/res/values/strings.xml
+++ b/jokelibrary/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">jokeLibrary</string>
+    <string name="joketextactivity_title">HAHAHA</string>
 </resources>
